--- a/package.json
+++ b/package.json
@@ -11,17 +11,26 @@
   "dependencies": {
     "@tiptap/extension-blockquote": "^2.11.5",
     "@tiptap/extension-image": "^2.11.5",
+    "@tiptap/extension-link": "^2.11.5",
+    "@tiptap/extension-placeholder": "^2.11.5",
+    "@tiptap/html": "^2.11.5",
     "@tiptap/pm": "^2.11.5",
     "@tiptap/react": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
     "axios": "^1.8.2",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.5.1",
+    "dompurify": "^3.2.4",
+    "formidable": "^3.5.2",
+    "lucide-react": "^0.479.0",
     "mongoose": "^8.12.1",
     "next": "15.2.1",
     "next-auth": "^4.24.11",
+    "next-cloudinary": "^6.16.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "sonner": "^2.0.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
