--- a/package.json
+++ b/package.json
@@ -17,13 +17,17 @@
     "@tiptap/pm": "^2.11.5",
     "@tiptap/react": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
+    "@types/mongoose": "^5.11.97",
     "axios": "^1.8.2",
     "bcryptjs": "^3.0.2",
+    "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.5.1",
+    "clsx": "^2.1.1",
     "dompurify": "^3.2.4",
     "formidable": "^3.5.2",
     "lucide-react": "^0.479.0",
     "mongoose": "^8.12.1",
+    "motion": "^12.5.0",
     "next": "15.2.1",
     "next-auth": "^4.24.11",
     "next-cloudinary": "^6.16.0",
@@ -31,6 +35,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "sonner": "^2.0.1",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
   },
   "devDependencies": {
